--- a/template/outputs/style.css
+++ b/template/outputs/style.css
@@ -11,7 +11,7 @@
 .sortable .oddrow td {background:#ecf2f6}
 .sortable td.evenselected {background:#ecf2f6}
 .sortable td.oddselected {background:#dce6ee}
-
+
 #controls {width:980px; margin:0 auto; height:20px}
 #perpage {float:left; width:200px}
 #perpage select {float:left; font-size:11px}
@@ -20,17 +20,17 @@
 #navigation img {cursor:pointer}
 #text {float:left; width:200px; text-align:right; margin-top:2px}
 
-p 
-{ 
-	color: #666; 
-	font-size: 16px; 
-	font-weight: normal; 
+p
+{
+	color: #666;
+	font-size: 16px;
+	font-weight: normal;
 	text-align: justify;
 	margin-top: 8px;
 }
 
-h4 
-{ 
+
+h4 {
 	color: #BF0000;
 	font-size: 16px;
 	font-style: normal;
@@ -38,11 +38,107 @@ h4
 	font-weight: lighter;
 	clear: both;
 	margin-top: 4px;
-
 }
 
 #welcome_server img.output {
 	float:  none;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
 }
+
+
+.scrollabletextbox{
+	font-size: 9pt;
+	width:940px;
+	text-align: center;
+	border-right:1px solid #c6d5e1;
+	border-top:1px solid #c6d5e1;
+	border-bottom:none;
+	margin-left:auto;
+	margin-right:auto;
+}
+/* tables */
+table.tablesorter {
+	font-size: 9pt;
+	width:940px;
+	text-align: center;
+	border-right:1px solid #c6d5e1;
+	border-top:1px solid #c6d5e1;
+	border-bottom:none;
+	margin-left:auto;
+	margin-right:auto;
+}
+table.tablesorter thead tr th {
+	font-size: 12pt;
+	font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif;
+	background-image: url(images/header-bg.gif);
+	background-repeat: repeat;
+	text-align:center;
+	color:#FFFFFF;
+	border:1px solid #fff;
+	border-right:none;
+}
+table.tablesorter thead tr h3 {
+	font-size:11px;
+	padding:6px 6px 4px 8px;
+	line-height: 13px;
+	font-weight: bold;
+	margin-top: 1px;
+}
+table.tablesorter thead tr h3.pwm {
+    width:30px;
+}
+table.tablesorter thead tr h3.mySort {
+	background: url(images/sort.gif) 7px center no-repeat;
+	padding-left:18px;
+	cursor: pointer;
+}
+table.tablesorter tbody td {
+	color: black;
+	padding:4px 2px 4px 2px;
+	border-bottom:1px solid #c6d5e1;
+	border-left:1px solid #c6d5e1;
+}
+table.tablesorter tbody td.regex {
+	width:150px;
+}
+table.tablesorter tbody td.logo {
+    width:190px;
+	float: none;
+	margin: 0px 0px 0px 0px;
+
+}
+table.tablesorter tbody td.logo img {
+	float: none;
+	margin: -3px 0px -3px 0px;
+	height:35px;
+}
+
+table.tablesorter tbody td.pwm img {
+	float: none;
+	margin: 0px 0px 0px 0px;
+    width:25px;
+    height:25px;
+
+}
+table.tablesorter thead tr .headerSortDown , table.tablesorter thead tr .headerSortUp {
+	background-image: url(images/header-selected-bg.gif);
+	background-repeat: repeat;
+}
+table.tablesorter thead tr .headerSortUp h3.mySort {
+	background: url(images/asc.gif) 7px center;
+	background-repeat: no-repeat;
+	padding-left:18px;
+	cursor: pointer;
+
+}
+table.tablesorter thead tr .headerSortDown h3.mySort {
+	background: url(images/desc.gif) 7px center;
+	background-repeat: no-repeat;
+	padding-left:18px;
+	cursor: pointer;
+}
+
+.NormRow { background-color: #fff; }
+
+.AltRow  { background-color: #ecf2f6; }
